# docted

./: .gitignore  Cargo.toml  demo.fish  input.css  notes.md  start_web
.docted/: docted.toml  logs.toml  notes.toml
src/: cli.rs  doc.rs  docted.rs  logs.rs  main.rs  notes.rs
src/docted/: doc.rs  mod.rs
src/tui/: app.rs  event.rs  mod.rs  tui.rs  ui.rs
src/web/: mod.rs  web_notes.rs
static/: main.css
templates/: 404.html  notes.html
