[package]
name = "mru_hacks"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.6"
actix-web = "4.9.0"
anyhow = "1.0.89"
askama_actix = "0.14.0"
bat = "0.24.0"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.19", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures = "0.3.31"
html2text = "0.12.6"
ratatui = "0.28.1"
scraper = "0.20.0"
serde = { version = "1.0.210", features = ["derive"] }
surf = "2.3.2"
term_size = "0.3.2"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
toml = "0.8.19"
urlencoding = "2.1.3"
